--- a/upload.html
+++ b/upload.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Фотофильтр</title>
 </head>
+
 <body>
     <h1>Фотофильтр</h1>
-    <form action="/" method="post" enctype="multipart/form-data">
+    <form action="/?c={{name}}" method="post" enctype="multipart/form-data">
         <input type="file" name="image"/>
         <input type="submit" value="Обработать"/>
     </form>
