Choice is working

--- a/upload.html
+++ b/upload.html
@@ -10,6 +10,11 @@
     <form action="/?c={{name}}" method="post" enctype="multipart/form-data">
         <input type="file" name="image"/>
         <input type="submit" value="Обработать"/>
+        <p><b>Выберите фильтр, который вы желаете использовать:</b></p>
+        <input type="radio" name="filter" value="filterik" checked>Фильтр Ивана<Br>
+        <input type="radio" name="filter" value="filterym">Фильтр Юры<Br>
+        <input type="radio" name="filter" value="filterdb">Фильтр Димы<Br>
     </form>
+
 </body>
 </html>
