Added Vika's filter

--- a/upload.html
+++ b/upload.html
@@ -14,6 +14,7 @@
         <input type="radio" name="filter" value="filterik" checked>Фильтр Ивана<Br>
         <input type="radio" name="filter" value="filterym">Фильтр Юры<Br>
         <input type="radio" name="filter" value="filterdb">Фильтр Димы<Br>
+        <input type="radio" name="filter" value="filtervc">Фильтр Вики<Br>
     </form>
 
 </body>
