--- a/upload.html
+++ b/upload.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    bootstrap.js
     <meta charset="UTF-8">
     <title>Фотофильтр</title>
+
 </head>
 
 <body>
