--- a/upload.html
+++ b/upload.html
@@ -17,6 +17,8 @@
         <input type="radio" name="filter" value="filterym">Фильтр Юры<Br>
         <input type="radio" name="filter" value="filterdb">Фильтр Димы<Br>
         <input type="radio" name="filter" value="filtervc">Фильтр Вики<Br>
+        <input type="radio" name="filter" value="filtermm1">Фильтр Марата №1<Br>
+        <input type="radio" name="filter" value="filtermm2">Фильтр Марата №2<Br>
     </form>
 
 </body>
