Added Bootstrap styles and favicon.ico

--- a/result.html
+++ b/result.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Результат</title>
+    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Вот что получилось</h1>
-    <img src="/results/{{name}}" width="500x"/>
+    <h1 style="text-align: center">Вот что получилось</h1><br />
+    <img style="text-align: center" src="/results/{{name}}" width="800x"/>
 </body>
 </html>
