--- a/upload.html
+++ b/upload.html
@@ -24,6 +24,7 @@
         <input type="radio" name="filter" value="filtermm1" />Фильтр Марата №1<br />
         <input type="radio" name="filter" value="filtermm2" />Фильтр Марата №2<br />
     </form>
-
+    <br/>
+    <p align="center" style="color: red; font-size: 48px">{{error_report}}</p>
 </body>
 </html>
