--- a/result.html
+++ b/result.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Результат</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UNF-8">
+  <title>Результат</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+  <style>
+  html {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  body {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EF9CA7;
+  }
+  h2 {
+    font-family: 'Lobster', cursive;
+  }
+  .centered {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .panel{
+    background-color:#77A38C;
+  }
+}
+  </style>
 </head>
 <body>
-    <h1 style="text-align: center">Вот что получилось</h1><br />
-    <img style="text-align: center" src="/results/{{name}}" width="800x"/>
+  <div class="col-xs-12 col-md-4 col-md-offset-4 text-center centered">
+      <div class="panel" style="padding: 15px; margin: 10px;">
+        <div class="form-group" >
+          <h2 class="form-signin-heading" style="margin-bottom: 15px;">Результат</h2>
+        </div>
+        <div class="form-group" >
+          <img src="/results/{{name}}" width="800px">
+        </div>
+  </div>
 </body>
 </html>
