--- a/result.html
+++ b/result.html
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #EF9CA7;
+    background-color: #ec971f;
   }
   h2 {
     font-family: 'Lobster', cursive;
@@ -36,12 +36,13 @@
     justify-content: center;
   }
   .panel{
-    background-color:#77A38C;
+    background-color:#2aabd2;
   }
 }
   </style>
 </head>
 <body>
+<div class="row">
   <div class="col-xs-12 col-md-4 col-md-offset-4 text-center centered">
       <div class="panel" style="padding: 15px; margin: 10px;">
         <div class="form-group" >
@@ -50,6 +51,7 @@
         <div class="form-group" >
           <img src="/results/{{name}}" width="800px">
         </div>
+  </div>
   </div>
 </body>
 </html>
