--- a/upload.html
+++ b/upload.html
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #EF9CA7;
+    background-color: #2aabd2;
   }
   h2 {
     font-family: 'Lobster', cursive;
@@ -36,7 +36,7 @@
     justify-content: center;
   }
   .panel{
-    background-color:#77A38C;
+    background-color:#ec971f;
   }
 }
 
@@ -46,7 +46,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-4 col-md-offset-4 text-center centered">
       <div class="panel" style="padding: 15px; margin: 10px;">
-        <h2 class="form-signin-heading" style="margin-bottom: 15px;">Фотофильтр</h2>
+        <h2 class="form-signin-heading" style="margin-bottom: 15px;">Новогодний фотофильтр</h2>
         <form action="/" method="post" enctype="multipart/form-data">
           <div class="form-group" >
             <input class="btn btn-default " name="image" type="file">
