--- a/result.html
+++ b/result.html
@@ -25,8 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ec971f;
-  }
+    }
   h2 {
     font-family: 'Lobster', cursive;
   }
@@ -36,9 +35,9 @@
     justify-content: center;
   }
   .panel{
-    background-color:#2aabd2;
+
+    padding: 30px;
   }
-}
   </style>
 </head>
 <body>
