--- a/upload.html
+++ b/upload.html
@@ -36,28 +36,30 @@
     justify-content: center;
   }
   .panel{
-    background-color:#ec971f;
+    padding: 50px;
   }
-}
+
 
   </style>
   </head>
 <body>
   <div class="row">
     <div class="col-xs-12 col-md-4 col-md-offset-4 text-center centered">
-      <div class="panel" style="padding: 15px; margin: 10px;">
+      <div class="panel" style="margin: 10px;">
         <h2 class="form-signin-heading" style="margin-bottom: 15px;">Новогодний фотофильтр</h2>
-        <form action="/" method="post" enctype="multipart/form-data">
+        <form action="/?c={{name}}" method="post" enctype="multipart/form-data">
           <div class="form-group" >
             <input class="btn btn-default " name="image" type="file">
           </div>
             <div class="form-group">
-        <input type="radio" name="filter" value="filterik" checked />Фильтр Ивана<br />
-        <input type="radio" name="filter" value="filterym" />Фильтр Юры<br />
-        <input type="radio" name="filter" value="filterdb" />Фильтр Димы<br />
-        <input type="radio" name="filter" value="filtervc" />Фильтр Вики<br />
-        <input type="radio" name="filter" value="filtermm1" />Фильтр Марата №1<br />
-        <input type="radio" name="filter" value="filtermm2" />Фильтр Марата №2<br />
+            <div class="radio"><label><input type="radio" name="filter" value="filterik" checked />Фильтр Ивана</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filterym" />Фильтр Юры</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filtervc" />Фильтр Вики</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filterdb" />Фильтр Димы</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filtermm1" />Фильтр Марата №1</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filtermm2" />Фильтр Марата №2</label></div>
+            <div class="radio"><label><input type="radio" name="filter" value="filtermn" />Фильтр Максима</label></div>
+
             </div>
           <div class="form-group">
             <input class="btn btn-info"  type="submit" value="Обрабатывать"></input>
